package com.dare.cinema_booking_system.screenings.entity;

public enum ScreeningSeatStatus {
	FREE,
	RESERVED,
	SOLD
}
