package com.dare.cinema_booking_system.user.entity;

public enum Role {
	USER,
	STAFF,
	ADMIN
}
