@startuml

class Movie {
  Long id
  String title
  String description
  int duration
  Genre genre
}

class User {
  Long id
  String name
  String surname
  String email
  Role role
}

class Reservation {
  Long id
  LocalDateTime createdAt
  ReservationStatus status
}

class Screening {
  Long id
  Long cinemaRoomId
  LocalDate screeningDate
  BigDecimal price
  TimeSlot timeSlot
  LocalTime startTime
  LocalTime endTime
}

class Ticket {
  Long id
  String ticketNumber
  TicketStatus ticketStatus
  Date issuedAt

}

class CinemaRoom {
  Long id
  int roomNumber
  int rows
  int rowCapacity
  int roomCapacity
}

class Payment {
  Long id
  BigDecimal amount
  PaymentStatus paymentStatus
  PaymentMethod paymentMethod
}

class Seat {
  Long id
  int rowNumber
  int seatNumber

}
class ScreeningSeat {
  Long id
  ScreeningSeatStatus status
}

class ReservationScreeningSeats {
    Long reservationId
    Long screeningSeatId
}

enum ScreeningSeatStatus {
  FREE
  RESERVED
  SOLD
}
enum Role {
  ADMIN
  STAFF
  CUSTOMER
}

enum PaymentStatus {
  PAID
  UNPAID
  REFUND_PENDING
  REFUNDED
}

enum ReservationStatus {
  CREATED
  CONFIRMED
  CANCELLED
}

enum TicketStatus {
  VALID
  CANCELLED
  USED
  EXPIRED
}

enum Genre {
  ACTION
  COMEDY
  FANTASY
  MYSTERY
  SCIENCE_FICTION
  DRAMA
}


Seat "1" --> "*" ScreeningSeat

User "1" --> "*" Reservation
Reservation "*" --> "1" Screening
Reservation "1" --> "*" Ticket

Screening "*" --> "1" Movie
Screening "*" --> "1" CinemaRoom
Screening "1" --> "*" ScreeningSeat

CinemaRoom "1" --> "*" Seat

Ticket "*" --> "1" Seat
Reservation "1" --> "0..1" Payment
Reservation"*" --> "*" ReservationScreeningSeats
ScreeningSeat"*" --> "*" ReservationScreeningSeats
@enduml